--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,31 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+asgiref = "==3.5.2"
+certifi = "==2022.6.15"
+charset-normalizer = "==2.1.0"
+click = "==8.1.3"
+colorama = "==0.4.5"
+django = "==4.1"
+django-cors-headers = "==3.13.0"
+djangorestframework = "==3.12.4"
+djangorestframework-simplejwt = "==5.2.0"
+idna = "==3.3"
+mypy-extensions = "==0.4.3"
+pathspec = "==0.9.0"
+platformdirs = "==2.5.2"
+pyjwt = "==2.4.0"
+python-decouple = "==3.6"
+pytz = "==2022.1"
+requests = "==2.28.1"
+sqlparse = "==0.4.2"
+toml = "==0.10.2"
+tomli = "==2.0.1"
+tzdata = "==2022.1"
+urllib3 = "==1.26.11"
 
 [dev-packages]
+black = "==22.6.0"
 
 [requires]
-python_version = "3.10"
+python_version = "3.10.6"
